--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -594,6 +594,10 @@ video {
   top: -0.5rem;
 }
 
+.tw-bottom-0 {
+  bottom: 0px;
+}
+
 .tw-bottom-14 {
   bottom: 3.5rem;
 }
@@ -726,6 +730,10 @@ video {
   z-index: 4;
 }
 
+.tw-col-span-full {
+  grid-column: 1 / -1;
+}
+
 .tw-mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -819,12 +827,15 @@ video {
   margin-top: auto;
 }
 
-.tw-block {
-  display: block;
+.tw-line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
-.tw-inline-block {
-  display: inline-block;
+.tw-block {
+  display: block;
 }
 
 .tw-inline {
@@ -847,10 +858,6 @@ video {
   display: none;
 }
 
-.tw-aspect-\[4\/3\] {
-  aspect-ratio: 4/3;
-}
-
 .tw-h-10 {
   height: 2.5rem;
 }
@@ -861,6 +868,10 @@ video {
 
 .tw-h-4 {
   height: 1rem;
+}
+
+.tw-h-48 {
+  height: 12rem;
 }
 
 .tw-h-5 {
@@ -1206,16 +1217,6 @@ video {
   animation: tw-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
-@keyframes tw-spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.tw-animate-spin {
-  animation: tw-spin 1s linear infinite;
-}
-
 .tw-cursor-pointer {
   cursor: pointer;
 }
@@ -1228,6 +1229,10 @@ video {
 
 .tw-auto-rows-auto {
   grid-auto-rows: auto;
+}
+
+.tw-auto-rows-max {
+  grid-auto-rows: max-content;
 }
 
 .tw-grid-cols-1 {
@@ -1268,10 +1273,6 @@ video {
 
 .tw-place-items-center {
   place-items: center;
-}
-
-.tw-items-start {
-  align-items: flex-start;
 }
 
 .tw-items-center {
@@ -1442,10 +1443,6 @@ video {
   border-width: 1px;
 }
 
-.tw-border-4 {
-  border-width: 4px;
-}
-
 .tw-border-b {
   border-bottom-width: 1px;
 }
@@ -1519,15 +1516,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.tw-border-\[\#6366f1\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(99 102 241 / var(--tw-border-opacity, 1));
-}
-
-.tw-border-t-transparent {
-  border-top-color: transparent;
-}
-
 .\!tw-bg-\[\#6366f1\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity, 1)) !important;
@@ -1590,9 +1578,9 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
-.tw-bg-purple-100 {
+.tw-bg-gray-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 232 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .tw-bg-transparent {
@@ -1614,6 +1602,16 @@ video {
 
 .tw-bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.tw-bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.tw-from-black\/70 {
+  --tw-gradient-from: rgb(0 0 0 / 0.7) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .tw-from-green-400 {
@@ -1663,6 +1661,10 @@ video {
   --tw-gradient-to: #9333ea var(--tw-gradient-to-position);
 }
 
+.tw-to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+
 .tw-to-yellow-500 {
   --tw-gradient-to: #eab308 var(--tw-gradient-to-position);
 }
@@ -1695,6 +1697,10 @@ video {
 
 .tw-p-2 {
   padding: 0.5rem;
+}
+
+.tw-p-3 {
+  padding: 0.75rem;
 }
 
 .tw-p-4 {
@@ -1989,11 +1995,6 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
-.tw-text-purple-600 {
-  --tw-text-opacity: 1;
-  color: rgb(147 51 234 / var(--tw-text-opacity, 1));
-}
-
 .tw-text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
@@ -2135,6 +2136,12 @@ video {
   transition-duration: 150ms;
 }
 
+.tw-transition-shadow {
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .tw-transition-transform {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2151,10 +2158,6 @@ video {
 
 .tw-duration-500 {
   transition-duration: 500ms;
-}
-
-.tw-duration-700 {
-  transition-duration: 700ms;
 }
 
 .tw-duration-\[0\.3s\] {
@@ -2291,6 +2294,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:tw-shadow-xl:hover {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:tw-ring-2:hover {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2349,9 +2358,9 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.tw-group:hover .group-hover\:tw-scale-110 {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
+.tw-group:hover .group-hover\:tw-scale-105 {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2505,11 +2514,6 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:tw-bg-purple-950:is(.tw-dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 7 100 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:\!tw-text-white:is(.tw-dark *) {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
@@ -2538,11 +2542,6 @@ video {
 .dark\:tw-text-gray-500:is(.tw-dark *) {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
-}
-
-.dark\:tw-text-purple-400:is(.tw-dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(192 132 252 / var(--tw-text-opacity, 1));
 }
 
 .dark\:tw-text-white:is(.tw-dark *) {
@@ -2931,8 +2930,8 @@ video {
     width: 100%;
   }
 
-  .md\:tw-grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .md\:tw-grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
@@ -3000,8 +2999,8 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .lg\:tw-grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .lg\:tw-grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:tw-justify-around {
@@ -3037,8 +3036,8 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:tw-grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+  .xl\:tw-grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
