--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -634,6 +634,10 @@ video {
   right: 0px;
 }
 
+.tw-right-2 {
+  right: 0.5rem;
+}
+
 .tw-right-3 {
   right: 0.75rem;
 }
@@ -656,6 +660,14 @@ video {
 
 .tw-top-1\/2 {
   top: 50%;
+}
+
+.tw-top-16 {
+  top: 4rem;
+}
+
+.tw-top-2 {
+  top: 0.5rem;
 }
 
 .tw-top-3 {
@@ -694,6 +706,10 @@ video {
   top: 50%;
 }
 
+.tw-left-2 {
+  left: 0.5rem;
+}
+
 .tw--z-10 {
   z-index: -10;
 }
@@ -730,6 +746,14 @@ video {
   z-index: 4;
 }
 
+.tw-col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
+.tw-col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
 .tw-col-span-full {
   grid-column: 1 / -1;
 }
@@ -739,8 +763,17 @@ video {
   margin-right: auto;
 }
 
+.tw-my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .\!tw-mt-8 {
   margin-top: 2rem !important;
+}
+
+.tw-mb-12 {
+  margin-bottom: 3rem;
 }
 
 .tw-mb-2 {
@@ -771,8 +804,16 @@ video {
   margin-left: 0.75rem;
 }
 
+.tw-ml-64 {
+  margin-left: 16rem;
+}
+
 .tw-ml-auto {
   margin-left: auto;
+}
+
+.tw-mr-2 {
+  margin-right: 0.5rem;
 }
 
 .tw-mr-auto {
@@ -789,6 +830,10 @@ video {
 
 .tw-mt-10 {
   margin-top: 2.5rem;
+}
+
+.tw-mt-12 {
+  margin-top: 3rem;
 }
 
 .tw-mt-2 {
@@ -834,6 +879,13 @@ video {
   -webkit-line-clamp: 2;
 }
 
+.tw-line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+
 .tw-block {
   display: block;
 }
@@ -858,12 +910,24 @@ video {
   display: none;
 }
 
+.tw-aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
 .tw-h-10 {
   height: 2.5rem;
 }
 
+.tw-h-16 {
+  height: 4rem;
+}
+
 .tw-h-3 {
   height: 0.75rem;
+}
+
+.tw-h-32 {
+  height: 8rem;
 }
 
 .tw-h-4 {
@@ -918,6 +982,10 @@ video {
   height: 30px;
 }
 
+.tw-h-\[400px\] {
+  height: 400px;
+}
+
 .tw-h-\[50px\] {
   height: 50px;
 }
@@ -945,6 +1013,18 @@ video {
 
 .tw-h-full {
   height: 100%;
+}
+
+.tw-h-screen {
+  height: 100vh;
+}
+
+.tw-h-7 {
+  height: 1.75rem;
+}
+
+.tw-max-h-\[400px\] {
+  max-height: 400px;
 }
 
 .tw-max-h-\[550px\] {
@@ -1094,6 +1174,10 @@ video {
   width: max-content;
 }
 
+.tw-w-7 {
+  width: 1.75rem;
+}
+
 .tw-min-w-\[140px\] {
   min-width: 140px;
 }
@@ -1108,6 +1192,18 @@ video {
 
 .tw-min-w-full {
   min-width: 100%;
+}
+
+.tw-max-w-2xl {
+  max-width: 42rem;
+}
+
+.tw-max-w-4xl {
+  max-width: 56rem;
+}
+
+.tw-max-w-6xl {
+  max-width: 72rem;
 }
 
 .tw-max-w-\[1000px\] {
@@ -1150,8 +1246,16 @@ video {
   max-width: 850px;
 }
 
+.tw-max-w-md {
+  max-width: 28rem;
+}
+
 .tw-max-w-xl {
   max-width: 36rem;
+}
+
+.tw-max-w-7xl {
+  max-width: 80rem;
 }
 
 .tw-flex-1 {
@@ -1209,6 +1313,10 @@ video {
 
 .tw-transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-animate-\[fadeIn_0\.5s_ease-out\] {
+  animation: fadeIn 0.5s ease-out;
 }
 
 @keyframes tw-pulse {
@@ -1367,6 +1475,12 @@ video {
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
+.tw-space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .tw-space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1457,6 +1571,10 @@ video {
   border-width: 2px;
 }
 
+.tw-border-4 {
+  border-width: 4px;
+}
+
 .tw-border-\[1px\] {
   border-width: 1px;
 }
@@ -1473,12 +1591,20 @@ video {
   border-left-width: 1px;
 }
 
+.tw-border-r {
+  border-right-width: 1px;
+}
+
 .tw-border-t {
   border-top-width: 1px;
 }
 
 .\!tw-border-solid {
   border-style: solid !important;
+}
+
+.tw-border-dashed {
+  border-style: dashed;
 }
 
 .tw-border-none {
@@ -1493,6 +1619,11 @@ video {
 .\!tw-border-gray-600 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(75 85 99 / var(--tw-border-opacity, 1)) !important;
+}
+
+.tw-border-\[\#6366f1\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity, 1));
 }
 
 .tw-border-black {
@@ -1528,9 +1659,18 @@ video {
   border-color: rgb(75 85 99 / var(--tw-border-opacity, 1));
 }
 
+.tw-border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
+}
+
 .tw-border-red-500 {
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
+}
+
+.tw-border-transparent {
+  border-color: transparent;
 }
 
 .tw-border-white {
@@ -1549,6 +1689,11 @@ video {
 
 .\!tw-bg-transparent {
   background-color: transparent !important;
+}
+
+.tw-bg-\[\#000000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .tw-bg-\[\#000000af\] {
@@ -1599,6 +1744,10 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.tw-bg-black\/50 {
+  background-color: rgb(0 0 0 / 0.5);
+}
+
 .tw-bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
@@ -1607,6 +1756,26 @@ video {
 .tw-bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+}
+
+.tw-bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
+}
+
+.tw-bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
+}
+
+.tw-bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
+.tw-bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
 }
 
 .tw-bg-transparent {
@@ -1620,6 +1789,19 @@ video {
 
 .tw-bg-white\/70 {
   background-color: rgb(255 255 255 / 0.7);
+}
+
+.tw-bg-\[\#6366f1\]\/10 {
+  background-color: rgb(99 102 241 / 0.1);
+}
+
+.tw-bg-indigo-500\/10 {
+  background-color: rgb(99 102 241 / 0.1);
+}
+
+.tw-bg-red-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity, 1));
 }
 
 .tw-bg-opacity-50 {
@@ -1721,6 +1903,10 @@ video {
   padding: 2.5rem;
 }
 
+.tw-p-12 {
+  padding: 3rem;
+}
+
 .tw-p-2 {
   padding: 0.5rem;
 }
@@ -1787,6 +1973,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.tw-px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .tw-px-\[10\%\] {
   padding-left: 10%;
   padding-right: 10%;
@@ -1817,6 +2008,11 @@ video {
   padding-bottom: 0.625rem;
 }
 
+.tw-py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .tw-py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1827,9 +2023,19 @@ video {
   padding-bottom: 1rem;
 }
 
+.tw-py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .tw-py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.tw-py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .tw-pb-10 {
@@ -1840,12 +2046,24 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.tw-pb-3 {
+  padding-bottom: 0.75rem;
+}
+
 .tw-pl-10 {
   padding-left: 2.5rem;
 }
 
 .tw-pr-4 {
   padding-right: 1rem;
+}
+
+.tw-pt-16 {
+  padding-top: 4rem;
+}
+
+.tw-pt-8 {
+  padding-top: 2rem;
 }
 
 .tw-pt-\[5\%\] {
@@ -1891,6 +2109,11 @@ video {
 
 .tw-text-7xl {
   font-size: 4.5rem;
+  line-height: 1;
+}
+
+.tw-text-8xl {
+  font-size: 6rem;
   line-height: 1;
 }
 
@@ -1991,6 +2214,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
+.tw-text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
 .tw-text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
@@ -2021,6 +2249,11 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
+.tw-text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity, 1));
+}
+
 .tw-text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
@@ -2029,6 +2262,11 @@ video {
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.tw-text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity, 1));
 }
 
 .tw-opacity-0 {
@@ -2225,6 +2463,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:tw-scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:tw-scale-x-\[1\.02\]:hover {
   --tw-scale-x: 1.02;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2265,9 +2509,19 @@ video {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:tw-bg-\[\#4f46e5\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:tw-bg-\[\#5457e5\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(84 87 229 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:tw-bg-\[\#5558e3\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(85 88 227 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:tw-bg-\[\#6366f1\]\/10:hover {
@@ -2298,6 +2552,30 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:tw-bg-gray-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:tw-bg-green-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:tw-bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:tw-bg-red-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:tw-bg-black\/70:hover {
+  background-color: rgb(0 0 0 / 0.7);
+}
+
 .hover\:\!tw-text-white:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
@@ -2306,6 +2584,11 @@ video {
 .hover\:tw-text-\[\#6366f1\]:hover {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity, 1));
+}
+
+.hover\:tw-text-red-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .hover\:tw-underline:hover {
@@ -2365,6 +2648,17 @@ video {
   outline-offset: 2px;
 }
 
+.focus\:tw-ring-1:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:tw-ring-\[\#6366f1\]:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity, 1));
+}
+
 .active\:tw-scale-95:active {
   --tw-scale-x: .95;
   --tw-scale-y: .95;
@@ -2397,6 +2691,10 @@ video {
 .tw-group:hover .group-hover\:tw-border-\[\#6366f1\] {
   --tw-border-opacity: 1;
   border-color: rgb(99 102 241 / var(--tw-border-opacity, 1));
+}
+
+.tw-group:hover .group-hover\:tw-opacity-100 {
+  opacity: 1;
 }
 
 .tw-peer:checked ~ .peer-checked\:tw-border-\[\#6366f1\] {
@@ -2544,6 +2842,18 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:tw-bg-\[\#6366f1\]\/10:is(.tw-dark *) {
+  background-color: rgb(99 102 241 / 0.1);
+}
+
+.dark\:tw-bg-indigo-500\/10:is(.tw-dark *) {
+  background-color: rgb(99 102 241 / 0.1);
+}
+
+.dark\:tw-bg-red-900\/20:is(.tw-dark *) {
+  background-color: rgb(127 29 29 / 0.2);
+}
+
 .dark\:\!tw-text-white:is(.tw-dark *) {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
@@ -2646,9 +2956,18 @@ video {
   background-color: rgb(31 41 55 / 0.5);
 }
 
+.dark\:hover\:tw-bg-\[\#6366f1\]\/10:hover:is(.tw-dark *) {
+  background-color: rgb(99 102 241 / 0.1);
+}
+
 .dark\:hover\:\!tw-text-black:hover:is(.tw-dark *) {
   --tw-text-opacity: 1 !important;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1)) !important;
+}
+
+.dark\:hover\:tw-text-red-500:hover:is(.tw-dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .dark\:focus\:tw-border-\[\#3b82f6\]:focus:is(.tw-dark *) {
@@ -3069,6 +3388,32 @@ video {
   .xl\:tw-grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
+}
+
+.\[\&\.liked\]\:tw-opacity-100.liked {
+  opacity: 1;
+}
+
+.\[\&\:not\(\.liked\)\]\:tw-opacity-0:not(.liked) {
+  opacity: 0;
+}
+
+.liked thumbnail .\[\.liked_thumbnail_\&\]\:tw-text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+}
+
+.liked thumbnail .\[\.liked_thumbnail_\&\]\:tw-opacity-100 {
+  opacity: 1;
+}
+
+not(.liked thumbnail) .\[not\(\.liked_thumbnail\)_\&\]\:tw-text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+not(.liked thumbnail) .\[not\(\.liked_thumbnail\)_\&\]\:tw-opacity-0 {
+  opacity: 0;
 }
 
   
