--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -706,10 +706,6 @@ video {
   top: 50%;
 }
 
-.tw-left-2 {
-  left: 0.5rem;
-}
-
 .tw--z-10 {
   z-index: -10;
 }
@@ -766,6 +762,11 @@ video {
 .tw-my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.tw-my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .\!tw-mt-8 {
@@ -1019,10 +1020,6 @@ video {
   height: 100vh;
 }
 
-.tw-h-7 {
-  height: 1.75rem;
-}
-
 .tw-max-h-\[400px\] {
   max-height: 400px;
 }
@@ -1174,10 +1171,6 @@ video {
   width: max-content;
 }
 
-.tw-w-7 {
-  width: 1.75rem;
-}
-
 .tw-min-w-\[140px\] {
   min-width: 140px;
 }
@@ -1204,6 +1197,10 @@ video {
 
 .tw-max-w-6xl {
   max-width: 72rem;
+}
+
+.tw-max-w-7xl {
+  max-width: 80rem;
 }
 
 .tw-max-w-\[1000px\] {
@@ -1252,10 +1249,6 @@ video {
 
 .tw-max-w-xl {
   max-width: 36rem;
-}
-
-.tw-max-w-7xl {
-  max-width: 80rem;
 }
 
 .tw-flex-1 {
@@ -1791,19 +1784,6 @@ video {
   background-color: rgb(255 255 255 / 0.7);
 }
 
-.tw-bg-\[\#6366f1\]\/10 {
-  background-color: rgb(99 102 241 / 0.1);
-}
-
-.tw-bg-indigo-500\/10 {
-  background-color: rgb(99 102 241 / 0.1);
-}
-
-.tw-bg-red-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity, 1));
-}
-
 .tw-bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1998,6 +1978,11 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.tw-py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .tw-py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2031,11 +2016,6 @@ video {
 .tw-py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.tw-py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 .tw-pb-10 {
@@ -2457,15 +2437,15 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:tw-scale-\[1\.02\]:hover {
-  --tw-scale-x: 1.02;
-  --tw-scale-y: 1.02;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:tw-scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:tw-scale-\[1\.02\]:hover {
+  --tw-scale-x: 1.02;
+  --tw-scale-y: 1.02;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2572,10 +2552,6 @@ video {
   background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:tw-bg-black\/70:hover {
-  background-color: rgb(0 0 0 / 0.7);
-}
-
 .hover\:\!tw-text-white:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
@@ -2584,11 +2560,6 @@ video {
 .hover\:tw-text-\[\#6366f1\]:hover {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity, 1));
-}
-
-.hover\:tw-text-red-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .hover\:tw-underline:hover {
@@ -2842,18 +2813,6 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:tw-bg-\[\#6366f1\]\/10:is(.tw-dark *) {
-  background-color: rgb(99 102 241 / 0.1);
-}
-
-.dark\:tw-bg-indigo-500\/10:is(.tw-dark *) {
-  background-color: rgb(99 102 241 / 0.1);
-}
-
-.dark\:tw-bg-red-900\/20:is(.tw-dark *) {
-  background-color: rgb(127 29 29 / 0.2);
-}
-
 .dark\:\!tw-text-white:is(.tw-dark *) {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
@@ -2956,18 +2915,9 @@ video {
   background-color: rgb(31 41 55 / 0.5);
 }
 
-.dark\:hover\:tw-bg-\[\#6366f1\]\/10:hover:is(.tw-dark *) {
-  background-color: rgb(99 102 241 / 0.1);
-}
-
 .dark\:hover\:\!tw-text-black:hover:is(.tw-dark *) {
   --tw-text-opacity: 1 !important;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1)) !important;
-}
-
-.dark\:hover\:tw-text-red-500:hover:is(.tw-dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .dark\:focus\:tw-border-\[\#3b82f6\]:focus:is(.tw-dark *) {
@@ -3395,24 +3345,6 @@ video {
 }
 
 .\[\&\:not\(\.liked\)\]\:tw-opacity-0:not(.liked) {
-  opacity: 0;
-}
-
-.liked thumbnail .\[\.liked_thumbnail_\&\]\:tw-text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
-}
-
-.liked thumbnail .\[\.liked_thumbnail_\&\]\:tw-opacity-100 {
-  opacity: 1;
-}
-
-not(.liked thumbnail) .\[not\(\.liked_thumbnail\)_\&\]\:tw-text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-not(.liked thumbnail) .\[not\(\.liked_thumbnail\)_\&\]\:tw-opacity-0 {
   opacity: 0;
 }
 
