--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -759,14 +759,14 @@ video {
   margin-right: auto;
 }
 
-.tw-my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .tw-my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+
+.tw-my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .\!tw-mt-8 {
@@ -815,6 +815,10 @@ video {
 
 .tw-mr-2 {
   margin-right: 0.5rem;
+}
+
+.tw-mr-6 {
+  margin-right: 1.5rem;
 }
 
 .tw-mr-auto {
@@ -921,6 +925,10 @@ video {
 
 .tw-h-16 {
   height: 4rem;
+}
+
+.tw-h-20 {
+  height: 5rem;
 }
 
 .tw-h-3 {
@@ -1093,6 +1101,10 @@ video {
   width: 2.5rem;
 }
 
+.tw-w-20 {
+  width: 5rem;
+}
+
 .tw-w-3 {
   width: 0.75rem;
 }
@@ -1193,6 +1205,10 @@ video {
 
 .tw-max-w-4xl {
   max-width: 56rem;
+}
+
+.tw-max-w-5xl {
+  max-width: 64rem;
 }
 
 .tw-max-w-6xl {
@@ -1693,6 +1709,11 @@ video {
   background-color: #000000af;
 }
 
+.tw-bg-\[\#1f1f1f\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 31 31 / var(--tw-bg-opacity, 1));
+}
+
 .tw-bg-\[\#3b82f6\] {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
@@ -1754,6 +1775,11 @@ video {
 .tw-bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
+}
+
+.tw-bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
 .tw-bg-green-600 {
@@ -2309,6 +2335,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.tw-shadow-none {
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .tw-shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -2328,6 +2360,12 @@ video {
 .tw-outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.tw-ring-0 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .tw-ring-1 {
