--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -829,6 +829,14 @@ video {
   margin-top: auto;
 }
 
+.tw-mt-\[-20px\] {
+  margin-top: -20px;
+}
+
+.tw-mt-\[-10px\] {
+  margin-top: -10px;
+}
+
 .tw-line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -958,6 +966,10 @@ video {
 
 .tw-h-screen {
   height: 100vh;
+}
+
+.tw-h-1\/2 {
+  height: 50%;
 }
 
 .tw-max-h-\[400px\] {
@@ -1091,6 +1103,10 @@ video {
   width: max-content;
 }
 
+.tw-w-3\/4 {
+  width: 75%;
+}
+
 .tw-min-w-\[320px\] {
   min-width: 320px;
 }
@@ -1192,6 +1208,21 @@ video {
 
 .tw--translate-y-\[50\%\] {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-y-\[-10px\] {
+  --tw-translate-y: -10px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-y-\[-100px\] {
+  --tw-translate-y: -100px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-y-\[-0px\] {
+  --tw-translate-y: -0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1312,6 +1343,10 @@ video {
 
 .tw-items-center {
   align-items: center;
+}
+
+.tw-justify-start {
+  justify-content: flex-start;
 }
 
 .tw-justify-center {
@@ -1912,6 +1947,18 @@ video {
   padding-top: 5%;
 }
 
+.tw-pt-2 {
+  padding-top: 0.5rem;
+}
+
+.tw-pt-5 {
+  padding-top: 1.25rem;
+}
+
+.tw-pt-4 {
+  padding-top: 1rem;
+}
+
 .tw-text-left {
   text-align: left;
 }
@@ -2099,6 +2146,11 @@ video {
 .tw-text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
+}
+
+.tw-text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
 
 .tw-opacity-0 {
