--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -773,6 +773,10 @@ video {
   margin-right: 1.5rem;
 }
 
+.tw-mr-8 {
+  margin-right: 2rem;
+}
+
 .tw-mr-auto {
   margin-right: auto;
 }
@@ -923,6 +927,10 @@ video {
   height: 240px;
 }
 
+.tw-h-\[300px\] {
+  height: 300px;
+}
+
 .tw-h-\[30px\] {
   height: 30px;
 }
@@ -1025,6 +1033,10 @@ video {
   width: 1rem;
 }
 
+.tw-w-48 {
+  width: 12rem;
+}
+
 .tw-w-5 {
   width: 1.25rem;
 }
@@ -1067,6 +1079,10 @@ video {
 
 .tw-w-\[450px\] {
   width: 450px;
+}
+
+.tw-w-\[533px\] {
+  width: 533px;
 }
 
 .tw-w-auto {
@@ -1191,6 +1207,16 @@ video {
 }
 
 .tw--translate-y-\[50\%\] {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-x-\[-50\%\] {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1496,6 +1522,10 @@ video {
 
 .tw-border-dashed {
   border-style: dashed;
+}
+
+.tw-border-dotted {
+  border-style: dotted;
 }
 
 .\!tw-border-black {
