--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -1163,10 +1163,6 @@ video {
   max-width: 850px;
 }
 
-.tw-max-w-md {
-  max-width: 28rem;
-}
-
 .tw-max-w-xl {
   max-width: 36rem;
 }
@@ -1181,6 +1177,16 @@ video {
 
 .tw-origin-center {
   transform-origin: center;
+}
+
+.-tw-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-tw-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw--translate-x-1\/2 {
@@ -1641,6 +1647,10 @@ video {
 
 .tw-bg-black\/50 {
   background-color: rgb(0 0 0 / 0.5);
+}
+
+.tw-bg-black\/70 {
+  background-color: rgb(0 0 0 / 0.7);
 }
 
 .tw-bg-gray-100 {
