--- a/css/index.css
+++ b/css/index.css
@@ -222,51 +222,11 @@ hr{
     border-radius: 25px;
 }
 
-
-/* ---------------- dropdown --------------------- */
-.dropdown {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-}
-
-.dropdown-toggle {
-    width: 100%;
-    outline: none;
-    /* background-color: #000; */
-    /* border: 1px solid #ccc; */
-}
-
-.dropdown-menu {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    background-color: var(--dropdown-bg);
-    /* border: 1px solid #c9c9c9; */
-    list-style-type: none;
-    padding: 0;
-    width: 100%;
-    left: 0px;
-    /* top: 105%; */
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.dropdown-menu li {
-    padding: 8px 12px;
-    cursor: pointer;
-}
-
-.dropdown-menu li:hover {
-    background-color: var(--dropdown-hover-bg);
-}
-
 /* -------------- carousel ------------------*/
 .carousel-container {
     overflow: hidden;
     white-space: nowrap;
     width: 100%;
-    max-width: 800px;
 }
   
 .carousel {
@@ -291,52 +251,32 @@ hr{
 
 /* ------ animated border ------- */
 
-.animated-border {
+.image-scroll-container {
+    width: 100%;
+    overflow: hidden;
     position: relative;
-    overflow: visible;
-}
-
-
-.animated-border::after{
-    content: '';
-    position: absolute;
-    top: 0px; 
-    left: -100%; 
-    width: 30%;
-    height: 100%;
-    border-radius: inherit; 
-    /* background: linear-gradient(#6366f1 23%, rgba(124,190,255,0) 87%); */
-    background-color: #6366f1;
-    background-repeat: no-repeat;
-    /* background-size: 200% 200%; */
-    background-position: 0% 0%;
-    filter: blur(1.5rem);
-    opacity: 0.8;
-    box-shadow: inset 0px 0px 20px 5px #6366f1;
-    /* transform: rotate(90deg); */
-    z-index: -2;
-    pointer-events: none;
-    animation: slide 10s ease-in-out infinite;
-   
-}
-
-.animated-border::before{
-    filter: blur(1.5rem);
-    opacity: 0.3;
-    will-change: transform;
-}
-
-@keyframes slide{
+  }
+  
+  .image-scroll {
+    display: flex;
+    animation: scroll-left 20s linear infinite;
+  }
+  
+  .image-scroll img {
+    margin-right: 10px;
+    width: 200px; /* Ajustez la taille des images */
+    height: auto;
+  }
+  
+  @keyframes scroll-left {
     0% {
-        left: -100%; /* Start completely outside the left edge */
-        right: 100%; /* End completely outside the right edge */
+      transform: translateX(100%);
     }
-   
     100% {
-        left: 100%; /* Move completely outside the right edge */
-        right: -100%; /* End completely outside the left edge */
+      transform: translateX(-100%);
     }
-}
+  }
+  
 
 .footer-link{
     width: -moz-fit-content;
