--- a/css/index.css
+++ b/css/index.css
@@ -347,43 +347,39 @@ hr{
     
 }
 
-@keyframes scroll {
-    from {
-        transform: translateX(100%);
-    }
-    to {
-        transform: translateX(-100%);
-    }
-}
-
-.tw-animate-scroll {
-    animation: scroll 20s linear infinite;
-}
-
 @keyframes scroll-left {
-    from {
-        transform: translateX(100%);
+    0% {
+      transform: translateX(0);
     }
-    to {
-        transform: translateX(-100%);
+    100% {
+      transform: translateX(-50%);
     }
 }
 
 @keyframes scroll-right {
-    from {
-        transform: translateX(-100%);
+    0% {
+      transform: translateX(-50%); 
     }
-    to {
-        transform: translateX(100%);
+    100% {
+      transform: translateX(0); 
     }
 }
 
 .tw-animate-scroll-left {
-    animation: scroll-left 20s linear infinite;
+    display: flex;
+    animation: scroll-left 20s linear infinite; 
+    width: 200%; 
 }
 
+.tw-overflow-hidden {
+    overflow: hidden; 
+}
+  
+
 .tw-animate-scroll-right {
-    animation: scroll-right 20s linear infinite;
+    display: flex;
+    animation: scroll-right 20s linear infinite; 
+    width: 200%; 
 }
 
 .image-comparison {
