Updated version of generating images

--- a/css/tailwind-runtime.css
+++ b/css/tailwind-runtime.css
@@ -798,6 +798,10 @@ video {
   margin-top: auto;
 }
 
+.tw-ml-4 {
+  margin-left: 1rem;
+}
+
 .tw-line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -907,6 +911,30 @@ video {
 
 .tw-h-screen {
   height: 100vh;
+}
+
+.tw-h-\[200px\] {
+  height: 200px;
+}
+
+.tw-h-\[68px\] {
+  height: 68px;
+}
+
+.tw-h-\[80px\] {
+  height: 80px;
+}
+
+.tw-h-\[70px\] {
+  height: 70px;
+}
+
+.tw-h-\[65px\] {
+  height: 65px;
+}
+
+.tw-h-\[90px\] {
+  height: 90px;
 }
 
 .tw-max-h-\[650px\] {
@@ -1038,6 +1066,10 @@ video {
   width: max-content;
 }
 
+.tw-w-\[80\%\] {
+  width: 80%;
+}
+
 .tw-max-w-4xl {
   max-width: 56rem;
 }
@@ -1094,8 +1126,16 @@ video {
   max-width: 95vw;
 }
 
+.tw-max-w-lg {
+  max-width: 32rem;
+}
+
 .tw-max-w-xl {
   max-width: 36rem;
+}
+
+.tw-max-w-2xl {
+  max-width: 42rem;
 }
 
 .tw-flex-1 {
@@ -1141,6 +1181,26 @@ video {
 
 .tw-translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-y-\[5px\] {
+  --tw-translate-y: 5px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-y-\[10px\] {
+  --tw-translate-y: 10px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-y-\[px\] {
+  --tw-translate-y: px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-y-\[8px\] {
+  --tw-translate-y: 8px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1243,8 +1303,20 @@ video {
   place-items: center;
 }
 
+.tw-items-start {
+  align-items: flex-start;
+}
+
+.tw-items-end {
+  align-items: flex-end;
+}
+
 .tw-items-center {
   align-items: center;
+}
+
+.tw-items-stretch {
+  align-items: stretch;
 }
 
 .tw-justify-center {
@@ -1345,6 +1417,15 @@ video {
 
 .tw-overflow-y-auto {
   overflow-y: auto;
+}
+
+.tw-whitespace-normal {
+  white-space: normal;
+}
+
+.tw-break-normal {
+  overflow-wrap: normal;
+  word-break: normal;
 }
 
 .\!tw-rounded-xl {
@@ -1896,10 +1977,6 @@ video {
   line-height: 1rem;
 }
 
-.tw-text-\[1\.5rem\] {
-  font-size: 1.5rem;
-}
-
 .tw-font-bold {
   font-weight: 700;
 }
@@ -1910,14 +1987,6 @@ video {
 
 .tw-font-semibold {
   font-weight: 600;
-}
-
-.tw-font-light {
-  font-weight: 300;
-}
-
-.tw-italic {
-  font-style: italic;
 }
 
 .tw-ordinal {
@@ -2080,11 +2149,6 @@ video {
 
 .tw-shadow-\[rgba\(170\,49\,233\,0\.44021358543417366\)\] {
   --tw-shadow-color: rgba(170,49,233,0.44021358543417366);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.tw-shadow-gray-700 {
-  --tw-shadow-color: #374151;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
